--- a/day1/basic.html
+++ b/day1/basic.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <style>
+            table, th,td{
+                border: 1px solid black;
+                border-collapse: collapse;
+            }
+        </style>
     </head>
     <body>
         <h1>This is heading 1</h1>
@@ -56,7 +61,27 @@
 
         <a href="https://youtube.com" target="_blank"> <h1>This is a link to youtube</h1></a>
 
-
+        <table>
+            <tr>
+                <th>No.</th>
+                <th>Food Name</th>
+                <th>Rating (Out of 10)</th>
+            </tr>
+            <tr>
+                <td>1.</td>
+                <td>Chicken Rice</td>
+                <td>9</td>
+            </tr>
+                <td>2.</td>
+                <td>Pizza</td>
+                <td>10</td>
+            </tr>
+                <td>3.</td>
+                <td>Burger</td>
+                <td>10</td>
+            </tr>
+            
+        </table>
 
     </body>
     <footer>
