learnt bootstrap, container, css

--- a/day1/basic.html
+++ b/day1/basic.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="basic.css">
         <style>
-            table, th,td{
-                border: 1px solid black;
-                border-collapse: collapse;
+            h2{
+                color: brown;
             }
+    
         </style>
+        <title>POCOYOOOOO</title>
     </head>
     <body>
-        <h1>This is heading 1</h1>
+        <h1 style="color: red; font-size: 20px;">This is heading 1</h1>
         <h2>This is heading 2</h2>
         <h3>My name is Celine</h3>
         <h4> LOLOLLOLOLOL </h4>
         <h5> TROLOLOLOLL</h5>
         <h6> MMIMIMIMIMIMI </h6>
 
-        <p> This is a paragraph. </p>
+        <p class="para myPara"> This is a paragraph. </p>
 
         <ol>
             <li>Nasi Kandar</li>
